# OOP

./: .gitignore  CMakeLists.txt  Otkuda_nogi_rastut.md  README.md
code/: CMakeLists.txt  chek_number.cpp  chek_number.h  main.cpp
src/: chek_number.cpp  chek_number.h  main.cpp
tests/: CMakeLists.txt  unit_tests.cpp
